tests/negative/AppLeftImplicit.mjuvix
module AppLeftImplicit;

 x : Type;
 x ≔ {x};

end;
